<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDatos">

    <TextView
        android:id="@+id/TextNombreLLegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:text="@string/nombre" />


    <TextView
        android:id="@+id/FechaLLegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:text="@string/FechaNac" />

    <TextView
        android:id="@+id/TextTelefonoLlegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="0dp"
        android:text="@string/telefono" />

    <TextView
        android:id="@+id/TextEmailLlegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="172dp"
        android:text="@string/Email" />


    <TextView
        android:id="@+id/TextDescLlegada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="375dp"
        android:onClick="onClick"
        android:text="@string/btnEditarDatos" />


</RelativeLayout>