<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"


                />
            <EditText
                android:id="@+id/EditNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>





</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FechaNac"
            android:layout_below="@+id/textNombre"/>

        <EditText
            android:id="@+id/FechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MostrarDatepicker"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/telefono" />

        <EditText
            android:id="@+id/EditTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"/>

        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />




    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Desc" />

    <EditText
        android:id="@+id/EditDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:onClick="MostrarDatos"
        android:text="@string/btnSiguiente" />


</LinearLayout>